--- a/.github/advanced-ui-test.yaml
+++ b/.github/advanced-ui-test.yaml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 1
-        repository: your-username/your-ui-testing-repo
+        repository: RabeeaFaraj/OllamaUITesting
         token: ${{ secrets.UI_TESTING_GITHUB_TOKEN }}
       
     - name: Set up Python
@@ -69,7 +69,7 @@ jobs:
         BROWSER: ${{ matrix.browser }}
         SCREEN_WIDTH: ${{ matrix.resolution.width }}
         SCREEN_HEIGHT: ${{ matrix.resolution.height }}
-        OLLAMA_URL: http://EC2_PUBLIC_IP:3000
+        OLLAMA_URL: http://${{ secrets.HOST }}:3000
         TEST_NAME: ${{ matrix.browser }}-${{ matrix.resolution.name }}
       run: |
         pytest tests/ -v --tb=short
