--- a/.github/advanced-ui-test.yaml
+++ b/.github/advanced-ui-test.yaml
@@ -4,7 +4,7 @@ name: Advanced Selenium UI Tests
 on:
   pull_request:
     branches:
-     - main
+     - master
 
   workflow_dispatch:
     inputs:
