--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - yolo
     environment:
       YOLO_SERVICE: yolo:${YOLO_PORT}
+      YOLO_SERVICE_EC2: http://${{ secrets.HOST }}:${YOLO_PORT}
     ports:
       - "${OLLAMA_UI_PORT}:3000"
 
