--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ OLLAMA_UI_PORT=3000
 DB_USER=yolo_user
 DB_PASSWORD=yolo_pass
 DB_NAME=predictions
-EC2_HOST = ${{ secrets.HOST }}
+EC2_HOST = 3.253.87.93
