--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-OLLAMA_URL="http://localhost:11434"
+#OLLAMA_URL="http://localhost:11434"
+OLLAMA_URL=http://ollama:11434
 YOLO_IMAGE=rabeeafaraj/yolo:0.0.2
 OLLAMA_UI_IMAGE=rabeeafaraj/ollamaui_rabeea:0.0.1
 YOLO_PORT=8080
