adding env to docker compose

--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
 OLLAMA_URL="http://localhost:11434"
-YOLO_IMAGE=rabeeafaraj/yolo:0.0.2
-OLLAMA_UI_IMAGE=rabeeafaraj/ollamaui_rabeea:0.0.2
+
+YOLO_IMAGE=yolo:0.0.3
+OLLAMA_UI_IMAGE=ollama-ui:0.0.3
+
 YOLO_PORT=8080
 OLLAMA_UI_PORT=3000
+
 DB_USER=yolo_user
 DB_PASSWORD=yolo_pass
 DB_NAME=predictions
+
 EC2_HOST=3.253.87.93
 AWS_REGION=eu-west-1
 S3_BUCKET_NAME=rabeea-yolo-images
