--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -4,7 +4,6 @@ on:
   pull_request:
     branches: [master]
 
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -35,10 +34,10 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ubuntu
         key: ${{ secrets.EC2_SSH_KEY }}
-        source: "docker-compose.yaml"
+        source: "./docker-compose.yml"
         target: "/home/ubuntu/"
 
-    - name: Deploy to EC2
+    - name: Deploy to EC2 
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.HOST }}
