--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 OLLAMA_URL="http://localhost:11434"
 
-YOLO_IMAGE=yolo:0.0.3
-OLLAMA_UI_IMAGE=ollama-ui:0.0.3
+YOLO_IMAGE=yolo
+YOLO_IMAGE_TAG=bd56731ea7305d14a91b373843ba6948f526a424-20250907-103355
+OLLAMA_UI_IMAGE=ollama
 
 YOLO_PORT=8080
 OLLAMA_UI_PORT=3000
@@ -10,6 +11,6 @@ DB_USER=yolo_user
 DB_PASSWORD=yolo_pass
 DB_NAME=predictions
 
-EC2_HOST=3.253.87.93
+EC2_HOST=3.254.161.142
 AWS_REGION=eu-west-1
 S3_BUCKET_NAME=rabeea-yolo-images
