--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -87,7 +87,7 @@ jobs:
                     
   selenium-matrix-tests:
     runs-on: ubuntu-latest
-    
+    needs: deploy
     strategy:
       matrix:
         browser: [chrome, firefox]
