adding allure enviroment

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 OLLAMA_URL="http://localhost:11434"
 
 YOLO_IMAGE=yolo
-YOLO_IMAGE_TAG=bd56731ea7305d14a91b373843ba6948f526a424-20250907-103355
 OLLAMA_UI_IMAGE=ollama
 
 YOLO_PORT=8080
@@ -14,3 +13,7 @@ DB_NAME=predictions
 AWS_REGION=eu-west-1
 S3_BUCKET_NAME=rabeea-yolo-images
 
+YOLO_VERSION=yolo
+OLLAMA_VERSION=ollama
+POSTGRES_VERSION=postgres:14
+YOLO_IMG_TAG=bd56731ea7305d14a91b373843ba6948f526a424-20250907-103355
