add local host 8080 to .env

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ OLLAMA_URL="http://localhost:11434"
 YOLO_IMAGE=yolo
 OLLAMA_UI_IMAGE=ollama
 YOLO_IMG_TAG=bd56731ea7305d14a91b373843ba6948f526a424-20250907-103355
+YOLO_SERVICE=localhost:8080
 
 YOLO_PORT=8080
 OLLAMA_UI_PORT=3000
